# dotfiles

./: .Xresources  .bash_profile  .bashrc  .gitignore  .gitignore_global  .iex.exs  .zshrc  README.md  install.sh  install_dotfiles.yaml  pyproject.toml  requirements.txt
.config/nvim/: coc-settings.json.j2  init.vim.j2
.config/powerline/: config.json  powerline_notes.md
.config/powerline/colorschemes/: solarized.json
.config/powerline/themes/: powerline.json
.config/powerline/themes/tmux/: mbp.json
.irssi/: config
.tmux/: startup.sh  theme.sh  tmux.conf
.vim/: vimrc
roles/development/: alacritty.yml  languages.yml  main.yml  personal.yml  study.yml  vim.yml  wezterm.yml
roles/development/files/: alacritty.toml  init.lua  tmux.conf  tmux_startup.sh  tmux_status_bar.conf  wezterm.lua  zshrc
roles/development/files/nvim_lua/config/: autocmds.lua  keymaps.lua  options.lua
roles/development/files/nvim_lua/plugins/: colorscheme.lua  conform.lua  lilypond.lua  lspconfig.lua  nvim-ts-autotag.lua  plugins.lua
roles/development/files/zsh/: macos.zsh  zshrc
roles/development/tasks/: main.yml
roles/development/templates/: coc-settings.json.j2  init.vim.j2
tmux/: theme.sh  tmux.j2
vim/: vimrc
