[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Graham Leva <celaxodon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.6.0"
powerline-status = "^2.7"
ansible-lint = "^6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
