[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Graham Leva <celaxodon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.2.0"
pynvim = "^0.4.3"
ansible-lint = { version = "^24.2", markers = "platform_system != 'Windows'" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
